# lecturner

./: .gitignore  Cargo.toml  LICENSE  README.md  gitattributes  lecturner.toml  pdf_rip.py  setup_linux.sh  setup_mac.sh  setup_windows.ps1
src/: main.rs  pdf_rip.rs  records.rs
