[package]
name        = "lecturner"
version     = "0.2.0"
edition     = "2021"
description = "PDF and text to audiobook pipeline — rips, cleans, and speaks technical documents via local LLM + TTS models."
license     = "MIT"
repository  = "https://github.com/cancellogic/lecturner"
readme      = "README.md"
keywords    = ["tts", "audiobook", "pdf", "whisper", "llm"]
categories  = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "lecturner"
path = "src/main.rs"

[dependencies]
reqwest    = { version = "=0.11.27", features = ["blocking", "json"] }  # 0.11.x pin is load-bearing: last blocking-API series
serde      = { version = "1",        features = ["derive"] }
serde_json = "1"
clap       = { version = "4",        features = ["derive"] }
anyhow     = "1"
toml       = "1"
chrono     = { version = "0.4",      features = ["serde"] }
pdfsink-rs = "0.2"   # pure-Rust PDF word-bbox extraction; replaces pdf_rip.py

# ── Whisper validation ─────────────────────────────────────────────────────────
# Platform feature flags — uncomment EXACTLY ONE line that matches your hardware.
#
# Windows / Linux with NVIDIA GPU (CUDA):
whisper-rs = { version = "0.16", features = ["cuda"] }
#
# macOS Apple Silicon (Metal):
# whisper-rs = { version = "0.16", features = ["metal"] }
#
# CPU-only (any platform, slower):
# whisper-rs = { version = "0.16" }